Improvements to documentation
