# swagger/v1/swagger.yaml
@@ -1,39 +1,39 @@
 ---
 openapi: 3.0.1
 info:
-  title: Lekki Properties API by TS
-  version: v1
+  title: Lekki Properties API
+  version: v2
 paths:
-  '/api/v1/properties':
-    get:
-      summary: list properties
-      responses:
-        '200':
-          description: successful
+  "/api/v1/properties":
     post:
-      summary: create property
+      summary: Creates a property
+      tags:
+      - Properties
+      parameters: []
       responses:
-        '200':
-          description: successful
+        '201':
+          description: property created
+        '422':
+          description: invalid request
       requestBody:
         content:
           application/json:
             schema:
               type: object
               properties:
-                property_address:
+                address:
                   type: string
                 property_type:
                   type: string
-                bathrooms:
+                num_bedrooms:
                   type: integer
-                bedrooms:
+                num_sitting_rooms:
                   type: integer
-                sitting_rooms:
+                num_kitchens:
                   type: integer
-                toilets:
+                num_bathrooms:
                   type: integer
-                kitchens:
+                num_toilets:
                   type: integer
                 owner:
                   type: string
@@ -41,94 +41,144 @@ paths:
                   type: string
                 valid_from:
                   type: string
-                  format: date
+                  format: date-time
                 valid_to:
                   type: string
-                  format: date
+                  format: date-time
               required:
-                - property_address
-                - property_type
-                - valid_from
-                - valid_to
-                - description
-                - owner
-                - kitchens
-                - toilets
-                - bathrooms
-                - bedrooms
-                - sitting_rooms
-  '/api/v1/properties/{id}':
-    parameters:
+              - address
+              - property_type
+              - num_bedrooms
+              - num_sitting_rooms
+              - num_kitchens
+              - num_bathrooms
+              - num_toilets
+              - owner
+              - description
+              - valid_from
+              - valid_to
+    get:
+      summary: Retrieves properties
+      tags:
+      - Properties
+      parameters:
+      - name: owner
+        in: query
+        description: Owner of the properties
+        schema:
+          type: string
+      - name: num_bedrooms
+        in: query
+        description: Number of bedrooms in the properties
+        schema:
+          type: integer
+      - name: num_bathrooms
+        in: query
+        description: Number of bathrooms in the properties
+        schema:
+          type: integer
+      - name: address
+        in: query
+        description: Address of the properties
+        schema:
+          type: string
+      responses:
+        '200':
+          description: properties found
+        '404':
+          description: properties not found
+  "/api/v1/properties/{id}":
+    get:
+      summary: Retrieves a property
+      tags:
+      - Properties
+      parameters:
       - name: id
         in: path
-        description: id
         required: true
         schema:
           type: string
-    get:
-      summary: show property
       responses:
         '200':
-          description: successful
+          description: property found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  address:
+                    type: string
+                  property_type:
+                    type: string
+                  num_bedrooms:
+                    type: integer
+                  num_sitting_rooms:
+                    type: integer
+                  num_kitchens:
+                    type: integer
+                  num_bathrooms:
+                    type: integer
+                  num_toilets:
+                    type: integer
+                  owner:
+                    type: string
+                  description:
+                    type: string
+                  valid_from:
+                    type: string
+                    format: date-time
+                  valid_to:
+                    type: string
+                    format: date-time
+                required:
+                - id
+                - address
+                - property_type
+                - num_bedrooms
+                - num_sitting_rooms
+                - num_kitchens
+                - num_bathrooms
+                - num_toilets
+                - owner
+                - description
+                - valid_from
+                - valid_to
+        '404':
+          description: property not found
     put:
-      summary: update property
+      summary: Updates a property
+      tags:
+      - Properties
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         '200':
-          description: successful
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                bathrooms:
-                  type: integer
-                bedrooms:
-                  type: integer
-                sitting_rooms:
-                  type: integer
-                toilets:
-                  type: integer
-                kitchens:
-                  type: integer
-                description:
-                  type: string
-                valid_to:
-                  type: string
-                  format: date
+          description: property updated
+        '404':
+          description: property not found
     delete:
-      summary: delete property
-      responses:
-        '200':
-          description: successful
-  '/api/v1/properties/owner/{owner}':
-    parameters:
-      - name: owner
+      summary: Deletes a property
+      tags:
+      - Properties
+      parameters:
+      - name: id
         in: path
-        description: owner
         required: true
         schema:
           type: string
-    get:
-      summary: properties_by_owner property
       responses:
-        '200':
-          description: successful
-  '/api/v1/properties/address/{address}':
-    parameters:
-      - name: address
-        in: path
-        description: address
-        required: true
-        schema:
-          type: string
-    get:
-      summary: find_by_address property
-      responses:
-        '200':
-          description: successful
+        '204':
+          description: property deleted
+        '404':
+          description: property not found
 servers:
-  - url: https://{defaultHost}
-    variables:
-      defaultHost:
-        default: property-klky.onrender.com
+- url: http://{defaultHost}
+  variables:
+    defaultHost:
+      default: property-klky.onrender.com
